# booksim2

./: .clang-format  .gitignore  CMakeLists.txt
src/: Makefile  batchtrafficmanager.cpp  batchtrafficmanager.hpp  booksim.hpp  booksim_config.cpp  booksim_config.hpp  buffer.cpp  buffer.hpp  buffer_state.cpp  buffer_state.hpp  channel.hpp  config_utils.cpp  config_utils.hpp  credit.cpp  credit.hpp  flit.cpp  flit.hpp  flitchannel.cpp  flitchannel.hpp  globals.hpp  injection.cpp  injection.hpp  main.cpp  misc_utils.cpp  module.cpp  module.hpp  outputset.cpp  outputset.hpp  packet_reply_info.cpp  packet_reply_info.hpp  pipefifo.hpp  random_utils.cpp  random_utils.hpp  rng-double.c  rng.c  rng_double_wrapper.cpp  rng_wrapper.cpp  routefunc.cpp  routefunc.hpp  stats.cpp  (+8 more)
src/allocators/: allocator.cpp  allocator.hpp  islip.cpp  islip.hpp  loa.cpp  loa.hpp  maxsize.cpp  maxsize.hpp  pim.cpp  pim.hpp  selalloc.cpp  selalloc.hpp  separable.cpp  separable.hpp  separable_input_first.cpp  separable_input_first.hpp  separable_output_first.cpp  separable_output_first.hpp  wavefront.cpp  wavefront.hpp
src/arbiters/: arbiter.cpp  arbiter.hpp  matrix_arb.cpp  matrix_arb.hpp  prio_arb.cpp  prio_arb.hpp  roundrobin_arb.cpp  roundrobin_arb.hpp  tree_arb.cpp  tree_arb.hpp
src/networks/: anynet.cpp  anynet.hpp  cmesh.cpp  cmesh.hpp  dragonfly.cpp  dragonfly.hpp  fattree.cpp  fattree.hpp  flatfly_onchip.cpp  fly.cpp  fly.hpp  kncube.cpp  kncube.hpp  network.cpp  network.hpp  qtree.cpp  qtree.hpp  tree4.cpp  tree4.hpp
src/power/: buffer_monitor.cpp  buffer_monitor.hpp  power_module.cpp  power_module.hpp  switch_monitor.cpp  switch_monitor.hpp
src/routers/: chaos_router.cpp  chaos_router.hpp  event_router.cpp  event_router.hpp  iq_router.cpp  iq_router.hpp  router.cpp  router.hpp
